# streetFighter

./: .coverage  .gitignore  README.md  app.py  design.md  pyproject.toml  requirements.txt  tournaments.py
.github/workflows/: ci.yml
Street_Fighter.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
game/: main.py
game/engine/: ai.py  arena.py  fighter.py  hud.py  input_handler.py  settings.py
game/scenes/: character_select.py  fight.py  mode_select.py  results.py  title.py  tournament.py
models/: character.py
static/: scripts.js  styles.css
static/game/: main.js
static/game/entities/: AIController.js  Fighter.js  fighterArt.js
static/game/scenes/: BootScene.js  FightScene.js  SelectScene.js
templates/: index.html
tests/: test_app.py  test_character.py  test_tournaments.py
