[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "Street_Fighter"
version = "0.1.0"
description = "a competitive platform for players, a way to connect gamers, a space for friendly matches"
requires-python = ">=3.10"
dependencies = ["flask>=3.0"]

[tool.setuptools]
py-modules = ["app"]

[tool.pytest.ini_options]
addopts = "--cov=app --cov=tournaments --cov=models --cov-report=term-missing --cov-fail-under=100"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["app", "tournaments", "models"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]
